# Guijo

./: .gitmodules  CMakeLists.txt  README.md
docs/: CMakeLists.txt  conf.py  index.rst
example/: example.cpp
include/Guijo/: BasicEvents.hpp  Event.hpp  Guijo.hpp  Object.hpp  Utils.hpp  pch.hpp
include/Guijo/Event/: BasicEvents.hpp  Event.hpp  Key.hpp  StateLinked.hpp
include/Guijo/Graphics/: Context.hpp  Font.hpp  Graphics.hpp  OpenGL.hpp  Shader.hpp
include/Guijo/Objects/: EventReceiver.hpp  Flex.hpp  Object.hpp  Scrollbar.hpp
include/Guijo/Shaders/: CircleFragment.shader  CircleVertex.shader  EllipseFragment.shader  EllipseVertex.shader  LineFragment.shader  LineVertex.shader  RectFragment.shader  RectVertex.shader  TextFragment.shader  TextVertex.shader  TriangleFragment.shader  TriangleVertex.shader
include/Guijo/Utils/: Angle.hpp  Animated.hpp  Color.hpp  Pointer.hpp  Utils.hpp  Vec.hpp
include/Guijo/Window/: Window.hpp  WindowsWindow.hpp
libs/: CMakeLists.txt
source/Guijo/: Object.cpp
source/Guijo/Graphics/: Font.cpp  Graphics.cpp  OpenGL.cpp  Shader.cpp
source/Guijo/Objects/: EventReceiver.cpp  Flex.cpp  Object.cpp  Scrollbar.cpp
source/Guijo/Window/: WindowsWindow.cpp
